# Homework33_alt

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml
deploy/: .env  docker-compose.ci.yaml  docker-compose.dev.yaml  docker-compose.yaml
todolist/: .dockerignore  requirements.txt
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: _dc.py  client.py  models.py
todolist/bot/tg/fsm/: base.py  memory_storage.py
todolist/core/: serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_groups_alter_user_user_permissions.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal_goalcomment.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
todolist/todolist/: settings.py  urls.py
