[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Kibishicoder <kibishiart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
django-filter = "^22.1"
requests = "^2.28.1"
django-rest-framework = "^0.1.0"
drf-spectacular = "^0.24.2"
marshmallow-dataclass = "^8.5.9"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
